--- a/VLOMaps/Base.lproj/Main.storyboard
+++ b/VLOMaps/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="VLOMaps" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,41 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="TPn-PG-3Yo">
+                                <rect key="frame" x="16" y="66" width="343" height="581"/>
+                            </mapView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2DZ-WJ-SoC">
+                                <rect key="frame" x="16" y="28" width="288" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ypW-UL-2d4">
+                                <rect key="frame" x="312" y="27" width="47" height="30"/>
+                                <state key="normal" title="Znajdź"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="TPn-PG-3Yo" secondAttribute="trailing" id="2Y8-gH-3cF"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="2DZ-WJ-SoC" secondAttribute="leading" id="ByX-ki-vtS"/>
+                            <constraint firstItem="TPn-PG-3Yo" firstAttribute="top" secondItem="2DZ-WJ-SoC" secondAttribute="bottom" constant="8" id="Dpc-zV-amj"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="TPn-PG-3Yo" secondAttribute="leading" id="EeM-jr-IqV"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="TPn-PG-3Yo" secondAttribute="bottom" constant="20" id="Pmh-St-YA4"/>
+                            <constraint firstItem="2DZ-WJ-SoC" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="gLq-zL-5wB"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ypW-UL-2d4" secondAttribute="trailing" id="mr4-Je-PK8"/>
+                            <constraint firstItem="ypW-UL-2d4" firstAttribute="baseline" secondItem="2DZ-WJ-SoC" secondAttribute="baseline" id="nFn-c5-29u"/>
+                            <constraint firstItem="ypW-UL-2d4" firstAttribute="leading" secondItem="2DZ-WJ-SoC" secondAttribute="trailing" constant="8" id="tyI-qd-rAv"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="myMapView" destination="TPn-PG-3Yo" id="QO1-Rn-5CL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
 </document>
